--- a/_posts/2024-07-14-n-ary-life.md
+++ b/_posts/2024-07-14-n-ary-life.md
@@ -54,9 +54,11 @@ For example, whether to talk to that stranger who seems a bit too friendly.
 </p>
 
 <p>
+<blockquote>
 "We take risks all the time when we speak to people.
-When we engage with someone and trust them, we are taking a risk."¹<br/>
+When we engage with someone and trust them, we are taking a risk."¹<br/><br/>
 -David Belle
+</blockquote>
 </p>
 
 <p>
