--- a/_posts/2025-07-19-bar-fight.md
+++ b/_posts/2025-07-19-bar-fight.md
@@ -6,7 +6,7 @@
 
 <p>I've also never smashed a beer bottle over someone else's head during a bar fight.</p>
 
-<p>I've never had someone at a bar disrespect the woman I was with, thereby more or less obligating me to fight the individual in question.</p>
+<p>I've never had someone at a bar disrespect the woman I was there with, thereby more or less obligating me to fight the individual in question.</p>
 
 <p>I've never accidentally bumped into someone at a bar, and then had them refuse to accept my apology, and then had the whole situation continue to escalate until I was more or less obligated to fight the individual in question.</p>
 
