--- a/_posts/2021-08-02-Bruce-Lee.md
+++ b/_posts/2021-08-02-Bruce-Lee.md
@@ -10,8 +10,13 @@ Tao of Jeet Kune Do, by Bruce Lee
 
 ------------------------------
 <p>
-    Got interested in Bruce Lee in around 2008.
-    Honestly Bruce Lee is so cool it was easy to get interested. 
+    Bruce Lee was a great man who died far too young.
+    To paraphrase Thoreau, he lived deliberately fronting only the essential facts of life. -https://www.gutenberg.org/files/205/205-h/205-h.htm
+</p>
+
+<p>
+    I got interested in Bruce Lee in around 2008.
+    Honestly Bruce Lee is so cool it was pretty easy to get interested.
 </p>
 
 <p>
@@ -20,8 +25,8 @@ Tao of Jeet Kune Do, by Bruce Lee
 </p>
 
 <p>
-    Kinda skipped around in the book - probably didn't read every word. It was good.
-    It wasn't for school or anything - was just interested.
+    Kinda skipped around in the book and don't think I read every word. It was good.
+    It wasn't for school or a group or anything - was just interested.
 </p>
 
 <p>
@@ -35,13 +40,17 @@ Tao of Jeet Kune Do, by Bruce Lee
 <p>
 Inspired by Lee, I trained for fingertips-only push-ups:
 
-<iframe id="video" width="560" height="315" src="https://github.com/user-attachments/assets/7de05d69-2b69-416b-aafc-6dc9f42d20db" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<video src='https://github.com/user-attachments/assets/7de05d69-2b69-416b-aafc-6dc9f42d20db' width=180/>
 
 </p>
 
-Bruce Lee was a great guy who died far too young.
+<iframe id="video" width="560" height="315" src="https://github.com/user-attachments/assets/7de05d69-2b69-416b-aafc-6dc9f42d20db" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-The biggest takeaway that's stayed with me from Lee's ideas is his idea of martial arts as a means of honestly expressing oneself. He said this in an interview: "to me, ultimately martial art means honestly expressing yourself".
+
+<p>
+The idea of Bruce Lee's that's stayed with me the most is the idea of martial arts as a means of honestly expressing oneself.
+He said this in an interview: "to me, ultimately martial art means honestly expressing yourself". -https://www.youtube.com/watch?v=X2clpHtV1iA
+</p>
 
 A lot of things are about honestly expressing yourself. I cannot emphasize that enough, so I will say it again: A lot of things are about honestly expressing yourself.
 
