--- a/_posts/2021-08-02-Bruce-Lee.md
+++ b/_posts/2021-08-02-Bruce-Lee.md
@@ -48,23 +48,50 @@ Inspired by Lee, I trained for fingertips-only push-ups:
 
 
 <p>
-The idea of Bruce Lee's that's stayed with me the most is the idea of martial arts as a means of honestly expressing oneself.
-He said this in an interview: "to me, ultimately martial art means honestly expressing yourself". -https://www.youtube.com/watch?v=X2clpHtV1iA
+The idea of Bruce Lee's that's stayed with me the most is martial arts as a means of honestly expressing oneself.
+To quote Lee:
+<blockquote>
+to me, ultimately martial art means honestly expressing yourself
+</blockquote>
+-https://www.youtube.com/watch?v=X2clpHtV1iA
 </p>
 
-A lot of things are about honestly expressing yourself. I cannot emphasize that enough, so I will say it again: A lot of things are about honestly expressing yourself.
+<p>
+    <b>A lot of things in life are about honestly expressing yourself.</b>
+    TODO: look up the studies and rework this: Dr. Gabor Maté has popularized the scientific discovery that women who express themselves, and especially, who express their anger when they experience anger, are both less likely to contract breast cancer and more likely to survive breast cancer if they do contract it.
+</p>
 
-Dr. Gabor Maté has popularized the research-based finding that women who express themselves, and especially, who express their anger when they experience anger, are both less likely to contract breast cancer, and more likely to survive breast cancer if they do contract it.
+<p>
+Marcel Proust, in his monumental 1,267,06-word novel, <i>In Search of Lost Time (À la recherche du temps perdu)</i>, bout self-expression being the loophole the purpose of life 
 
+<blockquote>
+Proust’s work is distinctively his own, but at the same time it makes visible the
+conflicting mentalities that bridged the mechanization of slaughter in WWI. His work
+encapsulates a range of reactions to nostalgia for a better historical moment, as well as nostalgia
+for a different experience of time itself – as fulfilled and meaningful, rather than the site of
+incomprehensible losses. Proust’s lesson is that art must replace god as the force that answers our
+fundamental human problems. Our wanting must take the form of desire, because only desire
+allows the artist to fully subsume his object in the pursuit of a mode of representation that can
+respond to the terror of dying. Proust’s work experiments with the precariousness of love, but
+finds it intolerable – the border that enables love’s joy yawns too darkly with the inevitable
+death. Although Proust’s friendships and his reactions to contemporary political events indicate
+that he privileged trust and human kindness in his life, how his aesthetic conclusions belie the
+same desirous nostalgic force that drove the history of the 20th century. 
+</blockquote>
+
+https://d-scholarship.pitt.edu/25687/1/bagleysc3_ETD2015.pdf.pdf?utm_source=chatgpt.com
+
+</p>
 TODO: find the timestamp within this video in which Mate says that: https://www.youtube.com/watch?v=c6IL8WVyMMs
 
-https://www.researchgate.net/publication/232524817_The_Validity_of_Emotional_Control_as_a_Trait_in_Breast_Cancer_Patients?utm_source=chatgpt.com
-https://worldwithoutrape.net/female-socialisation-and-womens-health/?utm_source=chatgpt.com
-https://www.eurekalert.org/news-releases/1027492?utm_source=chatgpt.com
+https://www.researchgate.net/publication/232524817_The_Validity_of_Emotional_Control_as_a_Trait_in_Breast_Cancer_Patients
+https://worldwithoutrape.net/female-socialisation-and-womens-health
+https://www.eurekalert.org/news-releases/1027492
 
-Add the proust, In Search of Lost Time, piece, about self-expression being the loophole the purpose of life 
 
 Add thing about asking people if there any doing any kind of creative stuff expression to the Bruce Lee essay
+
+I can't emphasize that enough, so I will say it again: a lot of things in life are about honestly expressing yourself.
 
 I think Bruce Lee very much succeeded in genuineness expressing himself. He had a positive genuineness that I think people could sense. In the above interview, for example, you can king of perceive the interviewer sensing his genuineness, and appreciating it.  
 
