--- a/_posts/2021-08-02-Bruce-Lee.md
+++ b/_posts/2021-08-02-Bruce-Lee.md
@@ -157,7 +157,7 @@ Add to the Bruce Lee essay that philosophy is the only subject whose name speaks
 
 Bruce Lee also understood and put into practice the essential importance of family. Accounts he had great relationships with both his wife and her son and both of them remember him fondly and speak well of him.
 
-There is a photo of Bruce Lee in his casket that has really stayed with me (https://i0.wp.com/.../2015/11/Brucelee11-Khurki.net_.jpg...). All of that ambition and discipline and drive and talent and energy and good character were simply gone, without reason.
+This photo of Bruce Lee in his casket that has really stayed with me: TODO add photo (https://i0.wp.com/.../2015/11/Brucelee11-Khurki.net_.jpg...). All of that ambition and discipline and drive and talent and energy and good character were simply gone, without reason.
 
 I once heard an interview where the person, speaking of mind uploading, said that in the future we'll look back at the current era with astonishment. The era in which we carried around something as precious as our entire mind in this biological vessel - subject to innumerable, and sometimes unexpected, risks of complete loss. We do better with our hard drives.
 
