--- a/_posts/2021-08-02-Bruce-Lee.md
+++ b/_posts/2021-08-02-Bruce-Lee.md
@@ -40,7 +40,7 @@ Tao of Jeet Kune Do, by Bruce Lee
 <p>
 Inspired by Lee, I trained for fingertips-only push-ups:
 
-<video src='https://raw.githubusercontent.com/BradleyCulley/bradleyculley.github.io/refs/heads/main/images/thumb-tip-push-ups-edited.mp4' width=180/>
+<video src='https://bradleyculley.github.io/images/thumb-tip-push-ups-edited.mp4' width=180/>
 
 </p>
 
