--- a/_posts/2021-08-02-Bruce-Lee.md
+++ b/_posts/2021-08-02-Bruce-Lee.md
@@ -1,8 +1,7 @@
 ## <div align="center">Bruce Lee<div>
-<div style="font-size: 25px; font-weight: bold;" align="center">by Brian Jacques</div>
 
 <div align="center">
-  <img src="https://bradleyculley.github.io/images/Bruce_Lee.jpeg" />¹
+  <img src="https://bradleyculley.github.io/images/Bruce_Lee.jpg" />¹
 </div>
 
 _______________________________________________
