--- a/_posts/2021-08-02-Bruce-Lee.md
+++ b/_posts/2021-08-02-Bruce-Lee.md
@@ -39,13 +39,14 @@ Tao of Jeet Kune Do, by Bruce Lee
 <p>
 Inspired by Lee, I trained for fingertips-only push-ups:
 
-<video src='https://bradleyculley.github.io/images/thumb-tip-push-ups-edited.mp4' width=180/>
+
+<video src='https://bradleyculley.github.io/images/thumb-tip-push-ups-edited.mp4' width=580/></video>
+
+
+<iframe id="video" width="560" height="315" src="https://bradleyculley.github.io/images/thumb-tip-push-ups-edited.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
 
 </p>
-
-<iframe id="video" width="560" height="315" src="https://github.com/user-attachments/assets/7de05d69-2b69-416b-aafc-6dc9f42d20db" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-
 <p>
 The idea of Bruce Lee's that's stayed with me the most is martial arts as a means of honestly expressing oneself.
 To quote Lee:
