--- a/_posts/2021-08-02-Bruce-Lee.md
+++ b/_posts/2021-08-02-Bruce-Lee.md
@@ -39,11 +39,12 @@ Tao of Jeet Kune Do, by Bruce Lee
 <p>
 Inspired by Lee, I trained for fingertips-only push-ups:
 
-
 <video src='https://bradleyculley.github.io/images/thumb-tip-push-ups-edited.mp4' width=580/></video>
 
-
-<iframe id="video" width="560" height="315" src="https://bradleyculley.github.io/images/thumb-tip-push-ups-edited.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<video width="180" controls>
+  <source src="/images/thumb-tip-push-ups-edited.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
 
 </p>
