--- a/_posts/2021-08-02-Bruce-Lee.md
+++ b/_posts/2021-08-02-Bruce-Lee.md
@@ -39,7 +39,7 @@ Tao of Jeet Kune Do, by Bruce Lee
 <p>
 Inspired by Lee, I trained for fingertips-only push-ups:
 
-<video width="180" controls>
+<video width="100%" controls>
   <source src="/images/thumb-tip-push-ups.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
