--- a/_posts/2021-08-02-Bruce-Lee.md
+++ b/_posts/2021-08-02-Bruce-Lee.md
@@ -4,32 +4,25 @@
   <img src="https://bradleyculley.github.io/images/Bruce_Lee.jpg" />¹
 </div>
 
-_______________________________________________
-Tao of Jeet Kune Do, by Bruce Lee
-
-------------------------------
-<p>
-    Bruce Lee was a great man who died far too young.
-    To paraphrase Thoreau, he lived deliberately fronting only the essential facts of life. -https://www.gutenberg.org/files/205/205-h/205-h.htm
-</p>
+<hr/>
 
 <p>
     I got interested in Bruce Lee in around 2008.
-    Honestly Bruce Lee is so cool it was pretty easy to get interested.
+    Honestly he's so cool it was easy to get interested.
 </p>
 
 <p>
     In the summer of 2008, I bought one of his books, <i>Tao of Jeet Kune Do</i>. 
-    I have a memory of reading <i>Tao of Jeet Kune Do</i> while waiting to get a haircut on Spring Street, the main street of the town where I went to college.
+    I have a memory of reading <i>Tao of Jeet Kune Do</i> while waiting to get a haircut on Spring Street, the main street where I went to college.
 </p>
 
 <p>
-    Kinda skipped around in the book and don't think I read every word. It was good.
-    It wasn't for school or a group or anything - was just interested.
+    I kind of skipped around in <i>Tao of Jeet Kune Do</i> and don't think I read every word.
+    It was good though.
 </p>
 
 <p>
-    <i>Tao of Jeet Kune Do</i> is apparently the best-selling martial arts book in the world:
+    It's apparently the best-selling martial arts book in the world:
     <blockquote>
     Compiled from Bruce Lee's notes and essays and originally published in 1975, Tao of Jeet Kune Do is the best-selling martial arts book in the world
     </blockquote>
@@ -37,17 +30,17 @@ Tao of Jeet Kune Do, by Bruce Lee
 </p>
 
 <p>
-Inspired by Lee, I trained for fingertips-only push-ups:
+Around that time, inspired by Bruce Lee, I trained for fingertips-only push-ups:
 
 <video width="100%" controls>
   <source src="/images/thumb-tip-push-ups.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
-
 </p>
+
 <p>
-The idea of Bruce Lee's that's stayed with me the most is martial arts as a means of honestly expressing oneself.
+The idea of Lee's that's stayed with me the most is martial arts as a means of honestly expressing oneself.
 To quote Lee:
 <blockquote>
 to me, ultimately martial art means honestly expressing yourself
@@ -59,6 +52,37 @@ to me, ultimately martial art means honestly expressing yourself
     <b>A lot of things in life are about honestly expressing yourself.</b>
     TODO: look up the studies and rework this: Dr. Gabor Maté has popularized the scientific discovery that women who express themselves, and especially, who express their anger when they experience anger, are both less likely to contract breast cancer and more likely to survive breast cancer if they do contract it.
 </p>
+
+<p>
+I often ask people, "are you doing any kind of creative self-expression?".
+It tends to catch people off guard, to incur some deep thought; rather like the question "are you happy?".
+</p>
+
+<p>
+I don't ask it with negative intent.
+It's like a vitamin deficiency.
+Like a forkful of well-cooked spinach, once you think about it, you realize you'd really <i>like</i> to be directly and honestly expressing yourself.
+</p>
+
+<p>
+In his 1,267,06-word novel, <i>In Search of Lost Time (À la recherche du temps perdu)</i>, published between 1913 and 1927 the narrator, a thinly disguised proxy the author, Marcel Proust, searches for the meaning of life, with perhaps an oddly specific definition.
+The definition is, as per the title of the novel, to solve the problem of lost time; to reclaim lost time.
+Lost time is those years lost in apparent meaninglessness, incorrect decisions, failures, and so on.
+It's a feeling many of us have experienced: life could have gone differently; it could have been so different — so much better.
+ 
+After much searching, the narrator comes to the perhaps surprising conclusion that the answer is art.
+In particular, that one can transmute the pain, grief, and loss of lost time through using those experiences as the basis upon which to create art.
+A sort of artistic alchemy of sublimation.
+
+<blockquote>
+"Returning to the prior circumstances of his life in order to translate them into a work of art is the means by which the Narrator reclaims the time lost in years gone by.
+The Narrator comes to discover that time he thought wasted, in frivolous society or in love, now comes to represent the materials from which he will compose his art."
+</blockquote>
+-https://stars.library.ucf.edu/cgi/viewcontent.cgi?article=1193&context=etd2023
+
+What a beautiful idea.
+</p>
+
 
 
 <blockquote>
@@ -85,24 +109,7 @@ https://www.researchgate.net/publication/232524817_The_Validity_of_Emotional_Con
 https://worldwithoutrape.net/female-socialisation-and-womens-health
 https://www.eurekalert.org/news-releases/1027492
 
-<p>
-I often ask people, "are you doing any kind of creative self-expression?".
-I think it's kind of like a vitamin deficiency for many people.
-Just like you feel good when you eat a forkful of nicely cooked spinach, once they think about it, people realize they'd really like to be directly expressing themselves.
-</p>
 
-<p>
-In his monumental 1,267,06-word novel, <i>In Search of Lost Time (À la recherche du temps perdu)</i>, the great French writer Marcel Proust concluded that self-expression is the answer for the purpose of life.
-The narrator of <i>In Search of Lost Time</i> searches for the answer to the question in the title: how to reclaim those years of life that seem to have been lost in apparent meaninglessness, a feeling many of us have experienced.
-Proust's answer is art:
-<blockquote>
-"Returning to the prior circumstances of his life in order to translate them into a work of art is the means by which the Narrator reclaims the time lost in years gone by.
-The Narrator comes to discover that time he thought wasted, in frivolous society or in love, now comes to represent the materials from which he will compose his art."
-</blockquote>
--https://stars.library.ucf.edu/cgi/viewcontent.cgi?article=1193&context=etd2023
-
-What a beautiful idea.
-</p>
 
 <p>
     Often we settle for indirectly expressing ourselves, via our work, via our influence on our children, and so on.
