--- a/_posts/2021-08-02-Bruce-Lee.md
+++ b/_posts/2021-08-02-Bruce-Lee.md
@@ -80,10 +80,8 @@ The Narrator comes to discover that time he thought wasted, in frivolous society
 </blockquote>
 -https://stars.library.ucf.edu/cgi/viewcontent.cgi?article=1193&context=etd2023
 
-What a beautiful idea.
+It is perhaps the single most wonderful idea I have ever encountered.
 </p>
-
-
 
 <blockquote>
 Proust’s work is distinctively his own, but at the same time it makes visible the
