--- a/_posts/2023-11-18-redwall.md
+++ b/_posts/2023-11-18-redwall.md
@@ -9,7 +9,7 @@ _______________________________________________
 
 I read this as a kid, maybe around 1998 or so. Great book.
 
-Perhaps in part, by virtue of being a kid at the time, there were fewer distractions on my attention, but it created an imaginative world with a vividness I don't think I've experienced in the same way in any other book. Even Harry Potter.
+Perhaps in part, by virtue of being a kid at the time, there were fewer distractions on my attention, but it created an imaginative world with a vividness I don't think I've experienced in the same way in any other book.
 
 I think it's really Jacques' writing though. He had one in a million type of imagination, artistic vision, and literary skill.
 
